--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   padding: 35px 0;
   justify-content: space-between;
   align-items: center;
+  
 
 }
 
@@ -127,7 +128,7 @@
 
 
 .FoodChefRecipe{
-  background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+  background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
   height: 350vh;
 }
 
@@ -198,6 +199,7 @@
 .Footer{
   height: auto;
   background-color: antiquewhite;
+  
 }
 
 .socialIcons{
@@ -229,12 +231,52 @@
 
 
 
+/* EXPAND RECIPE PAGE */
+
+.expandRecipeWholePage{
+  background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), radial-gradient(at top left, rgba(255,255,255,0.30) 0%, rgba(0,0,0,0.30) 100%);
+ background-blend-mode: screen;
+  height: 900vh;
+  text-align:left ;
+}
+
+.expandRecipe{
+  padding: 2% 15%;
+  
+}
+
+.recipeLabel{
+  font-size: 50px;
+  font-weight: bolder;
+
+}
+
+.recipePic{
+  width: 600px;
+  height: 400px;
+  margin : 6%;
+}
+
+.cuisinetype{
+  margin :  4% 23% 5% 0%;
+}
+
+.dishtype{
+  margin :  4% 23% 5% 0%;
+}
+
+
 
 
 
 
 @media(max-width : 1028px){
   .aboutRecipePage{
+    height: auto;
+  }
+
+  .FoodChefRecipe{
+    min-height: 100vh;
     height: auto;
   }
 
@@ -273,7 +315,14 @@
     width: 30rem;
   }
   
+  .searchButton{
+  margin-top: 3%;
+  }
 
+  .expandRecipeWholePage{
+    min-height: 100vh;
+    height: auto;
+  }
   
 }
 
